kubernetes/production-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seu-apim
  labels:
    name: seu-apim
    environment: production
